fixed logo spacing

--- a/qtify/src/components/Logo/Logo.module.css
+++ b/qtify/src/components/Logo/Logo.module.css
@@ -2,6 +2,7 @@
 width: 4vw;
 /* height: 50%; */
 top: 30px;
+bottom: 30px;
 left: 39px;
 
 }
